FIX: Alignment bug and signup page mulitple renders

--- a/src/components/CreatePost/CreatePost.scss
+++ b/src/components/CreatePost/CreatePost.scss
@@ -23,6 +23,7 @@
       height: 2rem;
       border-radius: 50%;
       margin-right: 6px;
+      object-fit: cover;
     }
     .author {
       display: flex;
